exports[`test Empty data is correct 1`] = `Object {}`;

exports[`test Empty options are correct 1`] = `
Object {
  "computed": Object {},
  "data": [Function anonymous],
  "methods": Object {},
  "name": "Empty",
  "props": Object {},
  "watch": Object {}
}
`;

exports[`test EmptyEmpty data is correct 1`] = `Object {}`;

exports[`test EmptyEmpty options are correct 1`] = `
Object {
  "computed": Object {},
  "data": [Function anonymous],
  "methods": Object {},
  "name": "EmptyEmpty",
  "props": Object {},
  "watch": Object {}
}
`;

exports[`test EmptyFull data is correct 1`] = `
Object {
  "bData": "abc"
}
`;

exports[`test EmptyFull options are correct 1`] = `
Object {
  "computed": Object {
    "bComputedProp": Object {
      "get": [Function get],
      "set": [Function set]
    }
  },
  "created": [Function anonymous],
  "data": [Function anonymous],
  "methods": Object {
    "bMethod": [Function anonymous],
    "bWatch": [Function anonymous]
  },
  "name": "EmptyFull",
  "props": Object {
    "bProp": Object {
      "default": "abc",
      "type": [Function String]
    }
  },
  "watch": Object {
    "bData": Object {
      "handler": [Function anonymous]
    }
  }
}
`;

exports[`test Full data is correct 1`] = `
Object {
  "aData": "abc"
}
`;

exports[`test Full options are correct 1`] = `
Object {
  "computed": Object {
    "aComputedProp": Object {
      "get": [Function get],
      "set": [Function set]
    }
  },
  "created": [Function anonymous],
  "data": [Function anonymous],
  "methods": Object {
    "aMethod": [Function anonymous],
    "aWatch": [Function anonymous]
  },
  "name": "Full",
  "props": Object {
    "aProp": Object {
      "default": "abc",
      "type": [Function String]
    }
  },
  "watch": Object {
    "aData": Object {
      "handler": [Function anonymous]
    }
  }
}
`;

exports[`test FullEmpty data is correct 1`] = `
Object {
  "aData": "abc"
}
`;

exports[`test FullEmpty options are correct 1`] = `
Object {
  "computed": Object {
    "aComputedProp": Object {
      "get": [Function get],
      "set": [Function set]
    }
  },
  "data": [Function anonymous],
  "methods": Object {
    "aMethod": [Function anonymous],
    "aWatch": [Function anonymous]
  },
  "name": "FullEmpty",
  "props": Object {
    "aProp": Object {
      "default": "abc",
      "type": [Function String]
    }
  },
  "watch": Object {
    "aData": Object {
      "handler": [Function anonymous]
    }
  }
}
`;

exports[`test FullFull data is correct 1`] = `
Object {
  "aData": "abc",
  "bData": "abc"
}
`;

exports[`test FullFull options are correct 1`] = `
Object {
  "compiled": [Function anonymous],
  "computed": Object {
    "aComputedProp": Object {
      "get": [Function get],
      "set": [Function set]
    },
    "bComputedProp": Object {
      "get": [Function get],
      "set": [Function set]
    }
  },
  "data": [Function anonymous],
  "methods": Object {
    "aMethod": [Function anonymous],
    "aWatch": [Function anonymous],
    "bMethod": [Function anonymous],
    "bWatch": [Function anonymous]
  },
  "name": "FullFull",
  "props": Object {
    "aProp": Object {
      "default": "abc",
      "type": [Function String]
    },
    "bProp": Object {
      "default": "abc",
      "type": [Function String]
    }
  },
  "watch": Object {
    "aData": Object {
      "handler": [Function anonymous]
    },
    "bData": Object {
      "handler": [Function anonymous]
    }
  }
}
`;

exports[`test FullOverride data is correct 1`] = `
Object {
  "aData": "123",
  "bData": "abc"
}
`;

exports[`test FullOverride options are correct 1`] = `
Object {
  "computed": Object {
    "aComputedProp": Object {
      "get": [Function get],
      "set": [Function set]
    }
  },
  "created": [Function anonymous],
  "data": [Function anonymous],
  "methods": Object {
    "aMethod": [Function anonymous],
    "aWatch": [Function anonymous]
  },
  "name": "FullOverride",
  "props": Object {
    "aProp": Object {
      "default": "123",
      "type": [Function String]
    }
  },
  "watch": Object {
    "aData": Object {
      "handler": [Function anonymous]
    }
  }
}
`;

exports[`test Root data is correct 1`] = `Object {}`;

exports[`test Root options are correct 1`] = `
Object {
  "computed": Object {},
  "data": [Function anonymous],
  "methods": Object {},
  "name": "Root",
  "props": Object {},
  "watch": Object {}
}
`;
